# Botanic_L-system_Modelisation

./: .gitignore  README.md  meson.build
includes/core/: l_system.hpp  module.hpp  rule.hpp  state.hpp
includes/utils/: drawer2D.hpp  material.hpp  turtle.hpp  vector3.hpp
src/: Makefile  brackets.cpp  context_sensitive.cpp  drawer2D.cpp  drawer2D.hpp  fractals.cpp  main.cpp  meson.build  opencv_test.cpp  parametric.cpp  stochastic.cpp  tree2D.cpp  tree3d.cpp
src/core/: l_system.cpp  l_system.hpp  module.cpp  rule.cpp  rule.hpp  state.cpp  state.hpp  utils.hpp
src/utils/: drawer2D.cpp  drawer2D.hpp  material.cpp  turtle.cpp  turtle.hpp  vector3.cpp  vector3.hpp
